<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diego.practica2.NuevoLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/aplicacionnuevologin"
        android:text="@string/aplicacion"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tipoaplicacion"
        android:text="@string/tipoaplicacion"
        android:layout_below="@+id/aplicacionnuevologin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/Fechaalta"
        android:text="@string/fechaalta"
        android:layout_below="@+id/tipoaplicacion"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/URLApp"
        android:text="@string/URLApp"
        android:layout_below="@+id/Fechaalta"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/imgURL"
        android:id="@+id/imgURL"
        android:layout_below="@+id/URLApp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usuario"
        android:id="@+id/textView"
        android:layout_below="@+id/imgURL"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:id="@+id/aceptarnuevologin"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eTextaplicacionnuevologin"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/aplicacionnuevologin" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTipoaplicacion"
        android:layout_toEndOf="@+id/tipoaplicacion"
        android:layout_alignTop="@+id/tipoaplicacion"
        android:layout_above="@+id/Fechaalta"
        android:spinnerMode="dropdown" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eTexturlapp"
        android:layout_below="@+id/Fechaalta"
        android:layout_toEndOf="@+id/textView" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eTextimgURL"
        android:layout_below="@+id/eTexturlapp"
        android:layout_toEndOf="@+id/imgURL" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eTextUsuario"
        android:layout_below="@+id/imgURL"
        android:layout_toEndOf="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/eTextPasword"
        android:layout_below="@+id/eTextUsuario"
        android:layout_alignEnd="@+id/aceptarnuevologin"
        android:layout_toEndOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/eTextFecha"
        android:layout_below="@+id/tipoaplicacion"
        android:layout_alignStart="@+id/eTextaplicacionnuevologin"
        android:layout_marginTop="5dp"
        android:layout_toStartOf="@+id/fecha" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:id="@+id/fecha"
        android:layout_alignTop="@+id/eTextFecha"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
