<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diego.practica2.NuevoUsuario">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imagenusuario"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usuario"
        android:id="@+id/txtusuario"
        android:layout_below="@+id/imagenusuario"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alias"
        android:hint="Introduza su usuario"
        android:layout_alignBottom="@+id/txtusuario"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/txtusuario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/txtpassword"
        android:layout_below="@+id/txtemail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_alignBottom="@+id/txtpassword"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/txtpassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:id="@+id/txtemail"
        android:layout_below="@+id/txtusuario"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="Introduza su email"
        android:layout_alignBottom="@+id/txtemail"
        android:layout_alignEnd="@+id/password"
        android:layout_toEndOf="@+id/txtemail" />

    <Button
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/fotogaleria"
        android:id="@+id/button"
        android:layout_alignTop="@+id/imagenusuario"
        android:layout_toEndOf="@+id/imagenusuario" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/fotocamara"
        android:id="@+id/button2"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/aceptar"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/cancelar"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button" />

    <android.gesture.GestureOverlayView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gestoUsuario"
        android:layout_below="@+id/txtpassword"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button3"
        android:layout_alignEnd="@+id/password"
        android:gestureColor="@color/colorAccent"
        android:background="@color/colorPrimary">
    </android.gesture.GestureOverlayView>
</RelativeLayout>
