<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diego.practica2.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usuario"
        android:id="@+id/txtUsuario"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IntroducirUsuario"
        android:hint="Introduza su usuario"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txtUsuario"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:id="@+id/Aceptar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/txtPassword"
        android:layout_alignBottom="@+id/IntroducirPassword"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/IntroducirPassword"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/txtUsuario"
        android:layout_toEndOf="@+id/txtPassword"
        android:layout_alignParentEnd="true" />

    <android.gesture.GestureOverlayView
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:id="@+id/gestureOverlayView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:gestureColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/txtPassword"
        android:layout_above="@+id/Aceptar"></android.gesture.GestureOverlayView>


</RelativeLayout>
